--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "IGVDev",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.11.20",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
