--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "nodemon": "nodemon server.js",
+    "start": "node server.ts",
+    "dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "IGVDev",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
