--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "outDir": "./built",
     "allowJs": true,
-    "target": "es5"
+    "target": "es6",
+    // "strict": true,
+    "module": "commonjs",
+
   },
   "include": ["./src/**/*"]
 }
