--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "@types/node": "^20.11.20",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.0.14",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.2"
+    "@flydotio/dockerfile": "^0.5.2",
+    "@types/passport": "^1.0.16"
   }
 }
