--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "IGVDev",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
     "bcryptjs": "^2.4.3",
