--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
